istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: frontend

spec:
  host: frontend

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
